# bedrock-rtl

./: Dockerfile  SCRIPTS.adoc  generate_mdfile.sh  index.html  testplan_slang_amba.html  testplan_slang_arb.html  testplan_slang_cdc.html  testplan_slang_counter.html  testplan_slang_credit.html  testplan_slang_csr.html  testplan_slang_delay.html  testplan_slang_demux.html  testplan_slang_ecc.html  testplan_slang_enc.html  testplan_slang_fifo.html  testplan_slang_flow.html  testplan_slang_gate.html  testplan_slang_lfsr.html  testplan_slang_macros.html  testplan_slang_misc.html  testplan_slang_multi_xfer.html  testplan_slang_mux.html  testplan_slang_pkg.html  testplan_slang_ram.html  testplan_slang_shift.html  testplan_slang_tracker.html  testplan_stardoc_bazel.html  testplan_verilator_amba.html  testplan_verilator_arb.html  testplan_verilator_cdc.html  testplan_verilator_counter.html  testplan_verilator_credit.html  testplan_verilator_csr.html  testplan_verilator_delay.html  testplan_verilator_demux.html  testplan_verilator_ecc.html  testplan_verilator_enc.html  testplan_verilator_fifo.html  testplan_verilator_flow.html  testplan_verilator_lfsr.html  (+7 more)
.codex/skills/write-br-testbench/: SKILL.md
.codex/skills/write-br-testbench/references/: br-dv-lib-testbench-patterns.md
.github/workflows/: ci.yml
amba/sim/: BUILD.bazel  br_amba_atb_funnel_sim_pkg.sv  br_amba_atb_funnel_tb.sv
amba/sim/drivers/: br_amba_atb_funnel_driver.sv
amba/sim/monitors/: br_amba_atb_funnel_input_monitor.sv  br_amba_atb_funnel_scoreboard.sv
cdc/sim/: BUILD.bazel
csr/sim/: BUILD.bazel
fifo/sim/: BUILD.bazel
flow/sim/: BUILD.bazel
ram/sim/br_ram_data_rd_pipe_tb/: BUILD.bazel  br_ram_data_rd_pipe_driver.svh  br_ram_data_rd_pipe_env.svh  br_ram_data_rd_pipe_item.svh  br_ram_data_rd_pipe_monitor.svh  br_ram_data_rd_pipe_random_sequence.svh  br_ram_data_rd_pipe_scoreboard.svh  br_ram_data_rd_pipe_tb.sv  br_ram_data_rd_pipe_tb_pkg.sv
scripts/: requirements.txt
tracker/sim/: BUILD.bazel
