# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_sim_test_tools_suite")
load("//bazel:verilog.bzl", "verilog_elab_test")

verilog_library(
    name = "br_amba_axi_isolate_sub_tb",
    srcs = ["br_amba_axi_isolate_sub_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_isolate_sub",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_isolate_sub_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axi_isolate_sub_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axi_isolate_sub_tb_sim_test_tools_suite",
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axi_isolate_sub_tb"],
)

verilog_library(
    name = "br_amba_axi_isolate_mgr_tb",
    srcs = ["br_amba_axi_isolate_mgr_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_isolate_mgr",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_isolate_mgr_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axi_isolate_mgr_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axi_isolate_mgr_tb_sim_test_tools_suite",
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axi_isolate_mgr_tb"],
)

verilog_library(
    name = "br_amba_axi_demux_tb",
    srcs = ["br_amba_axi_demux_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_demux",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_demux_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axi_demux_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axi_demux_tb_sim_test_tools_suite",
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axi_demux_tb"],
)

verilog_library(
    name = "br_amba_axi_shrinker_tb",
    srcs = ["br_amba_axi_shrinker_tb.sv"],
    deps = [
        "//amba/rtl:br_amba_axi_shrinker",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_amba_axi_shrinker_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_axi_shrinker_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_axi_shrinker_sim_test_tools_suite",
    # TODO(mgottscho): Enable Verilator once it no longer emits generated C++
    # references to undeclared fork sync objects such as `__Vfork_25__sync`.
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_axi_shrinker_tb"],
)

verilog_library(
    name = "br_amba_atb_funnel_sim_pkg",
    srcs = ["br_amba_atb_funnel_sim_pkg.sv"],
)

verilog_library(
    name = "br_amba_atb_funnel_driver",
    srcs = ["drivers/br_amba_atb_funnel_driver.sv"],
    deps = [
        ":br_amba_atb_funnel_sim_pkg",
        "//amba/rtl:br_amba_pkg",
    ],
)

verilog_library(
    name = "br_amba_atb_funnel_input_monitor",
    srcs = ["monitors/br_amba_atb_funnel_input_monitor.sv"],
    deps = [
        "//amba/rtl:br_amba_pkg",
    ],
)

verilog_library(
    name = "br_amba_atb_funnel_scoreboard",
    srcs = ["monitors/br_amba_atb_funnel_scoreboard.sv"],
    deps = [
        "//amba/rtl:br_amba_pkg",
    ],
)

verilog_library(
    name = "br_amba_atb_funnel_tb",
    srcs = ["br_amba_atb_funnel_tb.sv"],
    deps = [
        ":br_amba_atb_funnel_driver",
        ":br_amba_atb_funnel_input_monitor",
        ":br_amba_atb_funnel_scoreboard",
        ":br_amba_atb_funnel_sim_pkg",
        "//amba/rtl:br_amba_atb_funnel",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_amba_atb_funnel_tb_elab_test",
    tool = "slang",
    deps = [":br_amba_atb_funnel_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_amba_atb_funnel_sim_test_tools_suite",
    params = {
        "DataWidth": [
            "32",
            "64",
        ],
        "NumSources": [
            "2",
            "4",
        ],
        "RegisterAtReady": [
            "0",
            "1",
        ],
        "UserWidth": [
            "1",
            "3",
        ],
    },
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_amba_atb_funnel_tb"],
)
